# myrpgmakerpreplacement

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  DEEP_TECHNICAL_DEBT_AUDIT.md  FEATURES.md  PROJECT_STATUS.md  README.md  SCRIPT_MANAGER.md  TECHNICAL_DEBT_AUDIT_v6.md  TECHNICAL_DEBT_CLEANUP.md  VISUAL_SCRIPTING.md  justfile  rustfmt.toml
.github/workflows/: rust.yml
crates/dde-ai/: Cargo.toml
crates/dde-ai/src/: bark_templates.rs  cache.rs  lib.rs  providers.rs
crates/dde-ai/src/director/: analyzer.rs  generator.rs  mod.rs  pacing.rs  quest_pool.rs
crates/dde-ai/src/documentation/: exporters.rs  generator.rs  mod.rs  templates.rs
crates/dde-asset-forge/: Cargo.toml
crates/dde-asset-forge/src/: adapter.rs  asset_os.rs  classification.rs  dependency_graph.rs  duplicate_detection.rs  embedded_server.rs  lib.rs  webview.rs
crates/dde-audio/: Cargo.toml
crates/dde-audio/benches/: audio_math_benchmarks.rs
crates/dde-audio/src/: lib.rs
crates/dde-battle/: Cargo.toml
crates/dde-battle/examples/: inventory_ui_example.rs
crates/dde-battle/src/: auto_battle.rs  damage.rs  error.rs  formation.rs  items.rs  lib.rs  log.rs  status.rs  turn_queue.rs
crates/dde-battle/src/skills/: mod.rs
crates/dde-battle/src/ui/: inventory.rs  mod.rs
crates/dde-battle/tests/: inventory_ui_tests.rs
crates/dde-core/: Cargo.toml
crates/dde-core/benches/: ecs_benchmarks.rs  simulation_benchmarks.rs
crates/dde-core/src/: lib.rs  particles.rs  pathfinding.rs  profiler.rs  replay.rs
crates/dde-core/src/ai/: behavior_tree.rs  mod.rs
crates/dde-core/src/components/: animation.rs  audio.rs  battle.rs  behavior.rs  mod.rs  render.rs
crates/dde-core/src/events/: battle.rs  bus.rs  mod.rs
crates/dde-core/src/platform/: mod.rs  wasm.rs
crates/dde-core/src/profiler/: advanced.rs  enhanced.rs  mod.rs
crates/dde-core/src/resources/: formula.rs  mod.rs
crates/dde-core/src/save/: encryption.rs  manager.rs  mod.rs
crates/dde-core/src/serialization/: mod.rs
crates/dde-core/src/systems/: animation.rs  bark.rs  dialogue.rs  input.rs  mod.rs  movement.rs  player.rs  simulation.rs
crates/dde-core/src/vibecode/: mod.rs
crates/dde-core/tests/: simulation_integration_tests.rs
crates/dde-db/: Cargo.toml
crates/dde-db/benches/: database_benchmarks.rs
crates/dde-db/src/: lib.rs  query_builder.rs  screenshot.rs
crates/dde-db/src/migrations/: mod.rs  v2_asset_os.rs  v3_screenshots.rs  v4_cutscenes.rs  v4_visual_scripts.rs  v6_status_effects.rs  v7_classification_rules.rs  v8_formations.rs
crates/dde-db/src/models/: mod.rs
crates/dde-db/src/queries/: mod.rs
crates/dde-db/src/sync/: change_tracker.rs  conflict_resolver.rs  entity_mapper.rs  mod.rs
crates/dde-db/tests/: database_integration_tests.rs
crates/dde-editor/: Cargo.toml  SAVE_BROWSER_README.md
crates/dde-editor/examples/: lock_manager_example.rs  script_manager_example.rs
crates/dde-editor/src/: asset_os_panel.rs  battle_log_viewer.rs  battle_panel.rs  behavior_tree_editor.rs  collaboration_panel.rs  commands.rs  cutscene_editor.rs  dialogue_editor.rs  director_panel.rs  documentation_panel.rs  event_bus_monitor.rs  export.rs  formation_editor.rs  formula_editor.rs  hot_reload_panel.rs  inspector.rs  item_database_editor.rs  lib.rs  live_play.rs  lock_manager.rs  particle_editor.rs  pathfinding_debug.rs  patrol_editor.rs  profiler_panel.rs  profiler_panel_enhanced.rs  replay_panel.rs  save_browser.rs  save_panel.rs  schedule_editor.rs  script_manager.rs  status_effect_editor.rs  sync_panel.rs  turn_queue_visual.rs  visual_script_editor.rs
crates/dde-editor/src/asset_forge_panels/: asset_os_panel.rs  classification_rules_panel.rs  dependency_graph_panel.rs  duplicate_scanner_panel.rs  mod.rs
crates/dde-editor/src/behavior_tree/: compiler.rs  debugger.rs  editor.rs  mod.rs  nodes.rs
crates/dde-editor/src/tilemap/: autotile.rs  layer.rs  map.rs  mod.rs  tools.rs  ui.rs
crates/dde-editor/src/timeline/: editor.rs  export.rs  keyframes.rs  mod.rs  preview.rs  tracks.rs
crates/dde-editor/src/visual_script/: canvas.rs  compiler.rs  execution.rs  mod.rs  nodes.rs
crates/dde-export/: Cargo.toml
crates/dde-export/src/: database.rs  lib.rs  manifest.rs  mz.rs  standalone.rs  wasm.rs
crates/dde-lua/: Cargo.toml
crates/dde-lua/benches/: lua_benchmarks.rs
crates/dde-lua/src/: api.rs  hot_reload.rs  lib.rs  sandbox.rs  scripts.rs
crates/dde-render/: Cargo.toml
crates/dde-render/benches/: camera_benchmarks.rs
crates/dde-render/src/: asset_hot_reload.rs  hot_reload_watcher.rs  lib.rs  tilemap.rs  ui.rs
crates/dde-render/src/camera/: mod.rs
crates/dde-render/src/mesh/: mod.rs
crates/dde-render/src/pipeline/: mod.rs
crates/dde-render/src/shader/: mod.rs
crates/dde-render/src/tests/: hot_reload_tests.rs  mesh_tests.rs  mod.rs
crates/dde-render/src/texture/: mod.rs
crates/dde-sync/: Cargo.toml
crates/dde-sync/src/: client.rs  crdt.rs  error.rs  lib.rs  lock.rs  presence.rs  protocol.rs  server.rs
crates/dde-sync/tests/: collaboration_tests.rs
examples/: visual_script_example.rs
sidecar/: README.md  main.py  requirements.txt
src/: main.rs  project.rs
src/save/: asset_browser.rs  mod.rs
