[package]
name = "dde-ai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dde-core = { path = "../dde-core" }
dde-db = { path = "../dde-db" }

# Async
tokio = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
tracing = { workspace = true }
