[package]
name = "dde-asset-forge"
version = "0.1.0"
edition = "2021"

[dependencies]
dde-db = { path = "../dde-db" }
dde-core = { path = "../dde-core" }

# Webview for embedding Asset Forge
wry = { version = "0.46", default-features = false, features = ["devtools"] }

# Async runtime
tokio = { version = "1", features = ["rt", "sync", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image processing for classification
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Perceptual hashing for duplicate detection
img_hash = "3"

# File hashing
sha2 = "0.10"
hex = "0.4"

# Error handling
thiserror = "1"

# Logging
tracing = "0.1"

# Open URLs in browser
open = "5"

# Time and dates
chrono = "0.4"

# SQLite (re-exported from dde-db but needed for direct access)
rusqlite = "0.32"

# HTTP server for serving Asset Forge
axum = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", optional = true, features = ["fs", "cors"] }

# Base64 encoding/decoding for asset import
base64 = "0.22"

# Process management is in std - no external crate needed

# Windowing (for webview integration)
winit = { version = "0.30", optional = true }

[features]
default = ["embedded-server"]
embedded-server = ["axum", "tower", "tower-http"]
webview = ["dep:winit"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
