[package]
name = "dde-battle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dde-core = { path = "../dde-core" }
dde-render = { path = "../dde-render" }
dde-db = { path = "../dde-db" }
dde-audio = { path = "../dde-audio" }

# Error handling
thiserror = { workspace = true }
tracing = { workspace = true }
