[package]
name = "dde-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dde-core = { path = "../dde-core" }

# Database
rusqlite = { workspace = true }
refinery = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Random
rand = { workspace = true }

# Time
chrono = { workspace = true }

# Utilities
uuid = { workspace = true }

# Image processing for screenshots
image = { workspace = true }

[dependencies.egui]
workspace = true
optional = true

[features]
egui = ["dep:egui"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "database_benchmarks"
harness = false
