[package]
name = "dde-editor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dde-core = { path = "../dde-core" }
dde-ai = { path = "../dde-ai" }
dde-battle = { path = "../dde-battle" }
dde-render = { path = "../dde-render" }
dde-db = { path = "../dde-db" }
dde-export = { path = "../dde-export" }
dde-sync = { path = "../dde-sync" }
dde-asset-forge = { path = "../dde-asset-forge" }
dde-lua = { path = "../dde-lua" }

# UI
egui = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Utilities
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# Math
glam = { workspace = true }

# ECS
hecs = { workspace = true }

# Random
rand = { workspace = true }

# Async
futures = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

# Image processing (for thumbnails)
image = { workspace = true }
