[package]
name = "dde-export"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dde-core = { path = "../dde-core" }
dde-db = { path = "../dde-db" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# ZIP
zip = "2.0"

# Error handling
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
