[package]
name = "dde-export"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dde-core = { path = "../dde-core" }
dde-db = { path = "../dde-db" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Time
chrono = { workspace = true }

# ZIP
zip = "2.0"

# Error handling
thiserror = { workspace = true }
tracing = { workspace = true }

# WASM export
walkdir = { version = "2", optional = true }
pulldown-cmark = { version = "0.9", optional = true }

[features]
wasm-export = ["walkdir", "pulldown-cmark"]
