[package]
name = "dde-lua"
version = "0.1.0"
edition = "2021"

[dependencies]
dde-core = { path = "../dde-core" }
dde-db = { path = "../dde-db" }

# Lua scripting
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize", "send"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"

# Logging
tracing = "0.1"

# Time
chrono = "0.4"

# File watching for hot reload
notify = "6.0"

# Random
rand = "0.8"

# Error handling
anyhow = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
