[package]
name = "dde-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
dde-core = { path = "../dde-core" }
dde-db = { path = "../dde-db" }

# Networking
tokio = { version = "1", features = ["rt", "net", "sync"] }
tokio-tungstenite = "0.24"  # WebSocket

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
thiserror = "1"
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
